tests/type-errors/no_side_effect_in_function2.arl
archetype no_side_effect_in_function2

function f (a : address) : nat {
  transfer 0tz to a;
  return 1
}

entry exec () {
  ()
}
